--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Landing Page</title>
-        <link rel="styleshee" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -19,9 +19,45 @@
                 <li>header link three</li>
             </ul>
         </div>
-        <div class="container">
+        <div class="hero">
+            <div class="hero-left">
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-secondary">This website has some subtext that goes here under the main title. It's
+                    smaller font and the color is lower contrast</div>
+                <button>Sign up</button>
+            </div>
 
+            # all the images are from unsplash.com
+
+            <div class="hero-right">
+                <img src="./image1.jpg" class="hero-image" alt="this is a placeholder for an image" />
+            </div>
         </div>
+        <div class="info">
+            <div class="info-header">Some Random Information.</div>
+            <div class="image-container">
+                <div class="card"><img src="./image2.jpg">this is some subtext under an illustration or image</div>
+                <div class="card"><img src="./image3.jpg">this is some subtext under an illustration or image</div>
+                <div class="card"><img src="./image4.jpg">this is some subtext under an illustration or image</div>
+                <div class="card"><img src="./image5.jpg">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+        <div class="quote">
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
+        <div class="sign-up">
+            <div class="call-to-action">
+                <div class="call-to-action-left">
+                    <div class="call-to-action-header">Call to action! It's time!</div>
+                    <div class="call-to-action-text">Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+                <button class="footer-button">Sign up</button>
+            </div>
+        </div>
+        <div class="footer">Copyright ©︎ The Odin Project 2021</div>
     </body>
 
 </html>
