fix: Commented out the source of the images in the index.html file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button>Sign up</button>
             </div>
 
-            # all the images are from unsplash.com
+            <!-- all the images are from unsplash.com -->
 
             <div class="hero-right">
                 <img src="./image1.jpg" class="hero-image" alt="this is a placeholder for an image" />
